--- a/webapp/WEB-INF/views/my-page/bookmark.html
+++ b/webapp/WEB-INF/views/my-page/bookmark.html
@@ -75,7 +75,13 @@
 							<ol>
 								<li>
 									<div style="cursor: pointer;" onclick="window.location='';">
-									  	<img class="courseImg" src="../../../assets/image/my-page/sample.jpg">
+									  	<div class="img-icons">
+										  	<div class="like-bookmark">
+												<img class="like" src="../../../assets/image/main/heart-off.png">&nbsp;
+												<img class="bookmark" src="../../../assets/image/main/star.png">
+											</div>
+									  		<img class="courseImg" src="../../../assets/image/my-page/sample.jpg">
+									  	</div>
 									  	<div id="textBox">
 											<p id="courseName">신나는 코스</p>
 											<p id="courseInfo">홍길동</p>
@@ -85,7 +91,13 @@
 								</li>
 								<li>
 									<div style="cursor: pointer;" onclick="window.location='';">
-									  	<img class="courseImg" src="../../../assets/image/my-page/sample2.jpg">
+									  	<div class="img-icons">
+										  	<div class="like-bookmark">
+												<img class="like" src="../../../assets/image/main/heart.png">&nbsp;
+												<img class="bookmark" src="../../../assets/image/main/star.png">
+											</div>
+									  		<img class="courseImg" src="../../../assets/image/my-page/sample2.jpg">
+									  	</div>
 									  	<div id="textBox">
 											<p id="courseName">이건아닌데...</p>
 											<p id="courseInfo">고길동</p>
@@ -95,7 +107,13 @@
 								</li>
 								<li>
 									<div style="cursor: pointer;" onclick="window.location='';">
-									  	<img class="courseImg" src="../../../assets/image/my-page/sample3.jpg">
+									  	<div class="img-icons">
+										  	<div class="like-bookmark">
+												<img class="like" src="../../../assets/image/main/heart.png">&nbsp;
+												<img class="bookmark" src="../../../assets/image/main/star.png">
+											</div>
+									  		<img class="courseImg" src="../../../assets/image/my-page/sample3.jpg">
+									  	</div>
 									  	<div id="textBox">
 											<p id="courseName">깐따삐야 가는 길</p>
 											<p id="courseInfo">둘리</p>
@@ -105,7 +123,13 @@
 								</li>
 								<li>
 									<div style="cursor: pointer;" onclick="window.location='';">
-									  	<img class="courseImg" src="../../../assets/image/my-page/sample2.jpg">
+									  	<div class="img-icons">
+										  	<div class="like-bookmark">
+												<img class="like" src="../../../assets/image/main/heart.png">&nbsp;
+												<img class="bookmark" src="../../../assets/image/main/star.png">
+											</div>
+									  		<img class="courseImg" src="../../../assets/image/my-page/sample2.jpg">
+									  	</div>
 									  	<div id="textBox">
 											<p id="courseName">집에 가는 길</p>
 											<p id="courseInfo">둘리</p>
@@ -117,7 +141,13 @@
 								
 								<li>
 									<div style="cursor: pointer;" onclick="window.location='';">
-									  	<img class="courseImg" src="../../../assets/image/my-page/sample.jpg">
+									  	<div class="img-icons">
+										  	<div class="like-bookmark">
+												<img class="like" src="../../../assets/image/main/heart.png">&nbsp;
+												<img class="bookmark" src="../../../assets/image/main/star.png">
+											</div>
+									  		<img class="courseImg" src="../../../assets/image/my-page/sample.jpg">
+									  	</div>
 									  	<div id="textBox">
 											<p id="courseName">신나는 코스</p>
 											<p id="courseInfo">홍길동</p>
@@ -127,7 +157,13 @@
 								</li>
 								<li>
 									<div style="cursor: pointer;" onclick="window.location='';">
-									  	<img class="courseImg" src="../../../assets/image/my-page/sample2.jpg">
+									  	<div class="img-icons">
+										  	<div class="like-bookmark">
+												<img class="like" src="../../../assets/image/main/heart.png">&nbsp;
+												<img class="bookmark" src="../../../assets/image/main/star.png">
+											</div>
+									  		<img class="courseImg" src="../../../assets/image/my-page/sample2.jpg">
+									  	</div>
 									  	<div id="textBox">
 											<p id="courseName">이건아닌데...</p>
 											<p id="courseInfo">고길동</p>
@@ -137,7 +173,13 @@
 								</li>
 								<li>
 									<div style="cursor: pointer;" onclick="window.location='';">
-									  	<img class="courseImg" src="../../../assets/image/my-page/sample3.jpg">
+									  	<div class="img-icons">
+										  	<div class="like-bookmark">
+												<img class="like" src="../../../assets/image/main/heart.png">&nbsp;
+												<img class="bookmark" src="../../../assets/image/main/star.png">
+											</div>
+									  		<img class="courseImg" src="../../../assets/image/my-page/sample3.jpg">
+									  	</div>
 									  	<div id="textBox">
 											<p id="courseName">깐따삐야 가는 길</p>
 											<p id="courseInfo">둘리</p>
@@ -147,7 +189,13 @@
 								</li>
 								<li>
 									<div style="cursor: pointer;" onclick="window.location='';">
-									  	<img class="courseImg" src="../../../assets/image/my-page/sample2.jpg">
+									  	<div class="img-icons">
+										  	<div class="like-bookmark">
+												<img class="like" src="../../../assets/image/main/heart.png">&nbsp;
+												<img class="bookmark" src="../../../assets/image/main/star.png">
+											</div>
+									  		<img class="courseImg" src="../../../assets/image/my-page/sample2.jpg">
+									  	</div>
 									  	<div id="textBox">
 											<p id="courseName">집에 가는 길</p>
 											<p id="courseInfo">둘리</p>
@@ -172,7 +220,13 @@
 							<ol>
 								<li>
 									<div style="cursor: pointer;" onclick="window.location='';">
-									  	<img class="courseImg" src="../../../assets/image/my-page/sample.jpg">
+									  	<div class="img-icons">
+										  	<div class="like-bookmark">
+												<img class="like" src="../../../assets/image/main/heart.png">&nbsp;
+												<img class="bookmark" src="../../../assets/image/main/star.png">
+											</div>
+									  		<img class="courseImg" src="../../../assets/image/my-page/sample.jpg">
+									  	</div>
 									  	<div id="textBox">
 											<p id="courseName">신나는 코스</p>
 											<p id="courseInfo">홍길동</p>
@@ -182,7 +236,13 @@
 								</li>
 								<li>
 									<div style="cursor: pointer;" onclick="window.location='';">
-									  	<img class="courseImg" src="../../../assets/image/my-page/sample2.jpg">
+									  	<div class="img-icons">
+										  	<div class="like-bookmark">
+												<img class="like" src="../../../assets/image/main/heart.png">&nbsp;
+												<img class="bookmark" src="../../../assets/image/main/star.png">
+											</div>
+									  		<img class="courseImg" src="../../../assets/image/my-page/sample2.jpg">
+									  	</div>
 									  	<div id="textBox">
 											<p id="courseName">이건아닌데...</p>
 											<p id="courseInfo">고길동</p>
@@ -192,7 +252,13 @@
 								</li>
 								<li>
 									<div style="cursor: pointer;" onclick="window.location='';">
-									  	<img class="courseImg" src="../../../assets/image/my-page/sample3.jpg">
+									  	<div class="img-icons">
+										  	<div class="like-bookmark">
+												<img class="like" src="../../../assets/image/main/heart.png">&nbsp;
+												<img class="bookmark" src="../../../assets/image/main/star.png">
+											</div>
+									  		<img class="courseImg" src="../../../assets/image/my-page/sample3.jpg">
+									  	</div>
 									  	<div id="textBox">
 											<p id="courseName">깐따삐야 가는 길</p>
 											<p id="courseInfo">둘리</p>
@@ -202,7 +268,13 @@
 								</li>
 								<li>
 									<div style="cursor: pointer;" onclick="window.location='';">
-									  	<img class="courseImg" src="../../../assets/image/my-page/sample2.jpg">
+									  	<div class="img-icons">
+										  	<div class="like-bookmark">
+												<img class="like" src="../../../assets/image/main/heart.png">&nbsp;
+												<img class="bookmark" src="../../../assets/image/main/star.png">
+											</div>
+									  		<img class="courseImg" src="../../../assets/image/my-page/sample2.jpg">
+									  	</div>
 									  	<div id="textBox">
 											<p id="courseName">집에 가는 길</p>
 											<p id="courseInfo">둘리</p>
@@ -229,7 +301,13 @@
 							<ol>
 								<li>
 									<div style="cursor: pointer;" onclick="window.location='';">
-									  	<img class="courseImg" src="../../../assets/image/my-page/sample.jpg">
+									  	<div class="img-icons">
+										  	<div class="like-bookmark">
+												<img class="like" src="../../../assets/image/main/heart.png">&nbsp;
+												<img class="bookmark" src="../../../assets/image/main/star.png">
+											</div>
+									  		<img class="courseImg" src="../../../assets/image/my-page/sample.jpg">
+									  	</div>
 									  	<div id="textBox">
 											<p id="courseName">신나는 코스</p>
 											<p id="courseInfo">홍길동</p>
@@ -239,7 +317,13 @@
 								</li>
 								<li>
 									<div style="cursor: pointer;" onclick="window.location='';">
-									  	<img class="courseImg" src="../../../assets/image/my-page/sample2.jpg">
+									  	<div class="img-icons">
+										  	<div class="like-bookmark">
+												<img class="like" src="../../../assets/image/main/heart.png">&nbsp;
+												<img class="bookmark" src="../../../assets/image/main/star.png">
+											</div>
+									  		<img class="courseImg" src="../../../assets/image/my-page/sample2.jpg">
+									  	</div>
 									  	<div id="textBox">
 											<p id="courseName">이건아닌데...</p>
 											<p id="courseInfo">고길동</p>
@@ -249,7 +333,13 @@
 								</li>
 								<li>
 									<div style="cursor: pointer;" onclick="window.location='';">
-									  	<img class="courseImg" src="../../../assets/image/my-page/sample3.jpg">
+									  	<div class="img-icons">
+										  	<div class="like-bookmark">
+												<img class="like" src="../../../assets/image/main/heart.png">&nbsp;
+												<img class="bookmark" src="../../../assets/image/main/star.png">
+											</div>
+									  		<img class="courseImg" src="../../../assets/image/my-page/sample3.jpg">
+									  	</div>
 									  	<div id="textBox">
 											<p id="courseName">깐따삐야 가는 길</p>
 											<p id="courseInfo">둘리</p>
@@ -259,7 +349,13 @@
 								</li>
 								<li>
 									<div style="cursor: pointer;" onclick="window.location='';">
-									  	<img class="courseImg" src="../../../assets/image/my-page/sample2.jpg">
+									  	<div class="img-icons">
+										  	<div class="like-bookmark">
+												<img class="like" src="../../../assets/image/main/heart.png">&nbsp;
+												<img class="bookmark" src="../../../assets/image/main/star.png">
+											</div>
+									  		<img class="courseImg" src="../../../assets/image/my-page/sample2.jpg">
+									  	</div>
 									  	<div id="textBox">
 											<p id="courseName">집에 가는 길</p>
 											<p id="courseInfo">둘리</p>
