--- a/webapp/assets/css/my-page.css
+++ b/webapp/assets/css/my-page.css
@@ -21,6 +21,8 @@
 .resultList #listTitle {display:center; font-size: 18px; text-align:left;  padding:0px; margin-bottom:10px;}
 .resultList ol {width:100%; display :center; }
 .resultList li {width:(25%-margin);float : left ; list-style: none; margin:0px 5px 30px 10px}
+.resultList .img-icons {width:260px; height: 186px ; padding:0px; position:relative;}
+.resultList .like-bookmark {position: absolute; top:10%; left:88%; width:100%;transform:translate(-50%, -50%);}
 .resultList li .courseImg {width:260px; height: 186px ; padding:0px;}
 .resultList li #textBox {text-align:left; width:(100%-padding) ; height: 60px ; padding-left:5px;}
 .resultList li #textBox #courseName {font-weight:bold; font-size:16px; line-height: 20px; }
@@ -34,7 +36,7 @@
 /* 마이페이지-메뉴바 *************************************************************/
 /**************************************************************************/
 .menuBar-display {width:1200px; background-color:none;}
-.menuBar { width:400px; min-height:600px; background-color:lightyellow; text-align:left; line-height: 50px}
+.menuBar { width:400px; min-height:600px; text-align:left; line-height: 50px; border-right:solid 1px gray;}
 .menuBar #menuList {font-size: 14px; line-height:50px;}
 
 
@@ -45,7 +47,7 @@
 .menuBar .menu1 .menuBar-close {width: 20px; height: 20px;}
 
 
-.menuBar .menu2 {width:(100%-padding); height:(60%-padding); border-bottom:solid 1px #000000; text-align:left;  padding:20px 30px;}
+.menuBar .menu2 {width:(100%-padding); height:(60%-padding); border-bottom:solid 1px #000000; text-align:left;  padding:20px 30px; overflow:scroll;}
 .menuBar .menu2 #bookmark {font-size: 18px; float:left; font-weight:bold;}
 .menuBar .bmStar {width: 20px; height: 20px;}
 
