--- a/webapp/assets/css/together-write.css
+++ b/webapp/assets/css/together-write.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 @import "includes.css";
+@import "includes.css";
 @import "main.css";
 
 /* =======================공통======================= */
