--- a/webapp/WEB-INF/views/together/together-writeForm.html
+++ b/webapp/WEB-INF/views/together/together-writeForm.html
@@ -15,7 +15,26 @@
 <div id="wrap">
 	
 	<!-- 헤더 -->
-
+	<div id="header">
+			<a href="../main/index.html"><img id="logo" src="../../../assets/image/main/logo.jpg"></a>
+			
+			<div id="login">
+				<ul>
+					<li><a href="">회원가입</a></li>
+					<li><a href="">로그인</a></li>
+				</ul>
+			</div> <!-- login -->
+			
+			<div id="nav">
+				<ul>
+					<li><a href="../together/together.html">함깨하기</a></li>
+					<li><a href="../board/board.html">게시판</a></li>
+					<li><a href="../best/best.html">베스트</a></li>
+					<li><a href="../map/map.html">지도</a></li>
+				</ul>
+			</div> <!-- nav -->
+		</div> <!-- header -->
+		
 	<div id="content">
 		<!-- 타이틀 -->
 		<div>
