--- a/webapp/WEB-INF/views/together/together.html
+++ b/webapp/WEB-INF/views/together/together.html
@@ -10,6 +10,25 @@
 
 
 	<div id="wrap">
+		<div id="header">
+			<a href="../main/index.html"><img id="logo" src="../../../assets/image/main/logo.jpg"></a>
+			
+			<div id="login">
+				<ul>
+					<li><a href="">회원가입</a></li>
+					<li><a href="">로그인</a></li>
+				</ul>
+			</div> <!-- login -->
+			
+			<div id="nav">
+				<ul>
+					<li><a href="../together/together.html">함깨하기</a></li>
+					<li><a href="../board/board.html">게시판</a></li>
+					<li><a href="../best/best.html">베스트</a></li>
+					<li><a href="../map/map.html">지도</a></li>
+				</ul>
+			</div> <!-- nav -->
+		</div> <!-- header -->
 	
 		<h1>함께하기</h1>
 		
