--- a/webapp/WEB-INF/views/board/board.html
+++ b/webapp/WEB-INF/views/board/board.html
@@ -9,7 +9,26 @@
 <body>
 
 	<div id="wrap">
-	
+		<div id="header">
+			<a href="../main/index.html"><img id="logo" src="../../../assets/image/main/logo.jpg"></a>
+			
+			<div id="login">
+				<ul>
+					<li><a href="">회원가입</a></li>
+					<li><a href="">로그인</a></li>
+				</ul>
+			</div> <!-- login -->
+			
+			<div id="nav">
+				<ul>
+					<li><a href="../together/together.html">함깨하기</a></li>
+					<li><a href="../board/board.html">게시판</a></li>
+					<li><a href="../best/best.html">베스트</a></li>
+					<li><a href="../map/map.html">지도</a></li>
+				</ul>
+			</div> <!-- nav -->
+		</div> <!-- header -->
+		
 		<h1>게시판</h1>
 		
 		<!-- 필터링 옵션 항목 -->
@@ -151,19 +170,19 @@
 		
 		<!-- 페이지 -->
 		<div id="page">
-			<ul>
-				<li>◀</li>
-				<li>1</li>
-				<li>2</li>
-				<li>3</li>
-				<li>4</li>
-				<li class="active">5</li>
-				<li>6</li>
-				<li>7</li>
-				<li>8</li>
-				<li>9</li>
-				<li>10</li>
-				<li>▶</li>
+			<ul class="ul">
+				<li class="li">◀</li>
+				<li class="li">1</li>
+				<li class="li">2</li>
+				<li class="li">3</li>
+				<li class="li">4</li>
+				<li class="active li">5</li>
+				<li class="li">6</li>
+				<li class="li">7</li>
+				<li class="li">8</li>
+				<li class="li">9</li>
+				<li class="li">10</li>
+				<li class="li">▶</li>
 			</ul>
 		</div><!-- board button -->
 		
