--- a/webapp/WEB-INF/views/list/list.html
+++ b/webapp/WEB-INF/views/list/list.html
@@ -8,40 +8,45 @@
 
 </head>
 <body>
-<div id="wrap"> 
+	<div id="header">
+		<a href="../main/index.html">
+		<img id="logo"src="../../../assets/image/main/logo.jpg"></a>
 
-		<div id="header">
-			<a href="../main/index.html"><img id="logo" src="../../../assets/image/main/logo.jpg"></a>
-
-			<div id="login">
-				<ul>
-					<li><a href="">회원가입</a></li>
-					<li><a href="">로그인</a></li>
-				</ul>
-			</div>
-			<!-- login -->
-
-			<div id="nav">
-				<ul>
-					<li><a href="../together/together.html">함깨하기</a></li>
-					<li><a href="../board/board.html">게시판</a></li>
-					<li><a href="../best/best.html">베스트</a></li>
-					<li><a href="../map/map.html">지도</a></li>
-				</ul>
-			</div>
-			<!-- nav -->
+		<div id="login">
+			<ul>
+				<li><a href="">회원가입</a></li>
+				<li><a href="">로그인</a></li>
+			</ul>
 		</div>
-<!---------------------------------------- header --------------------------------------->
+		<!-- login -->
 
-	<div class="content">
-		<h1>문의 게시판</h1>
+		<div id="nav">
+			<ul>
+				<li><a href="../together/together.html">함께하기</a></li>
+				<li><a href="../board/board.html">게시판</a></li>
+				<li><a href="../best/best.html">베스트</a></li>
+				<li><a href="../map/map.html">지도</a></li>
+			</ul>
+		</div>
+		<!-- nav -->
+	</div>
+	<!---------------------------------------- header --------------------------------------->
+	<div id="wrap">
+		<div class="content">
+			<h1>문의 게시판</h1>
 
 			<div class="content-text">
-				<p><span id="a">♧</span> 답변은 글 작성해주신 이후 영업시간 기준 <span id="b">최대 24시간</span>이 소요되며,</p>
-				<p>&nbsp;&nbsp;&nbsp; 영업시간 외, <span id="b">주말 및 공휴일, 지정 휴일</span>엔 답변이 불가할 수 있습니다.</p>
+				<p>
+					<span id="a">♧</span> 답변은 글 작성해주신 이후 영업시간 기준 <span id="b">최대
+						24시간</span>이 소요되며,
+				</p>
+				<p>
+					&nbsp;&nbsp;&nbsp; 영업시간 외, <span id="b">주말 및 공휴일, 지정 휴일</span>엔 답변이
+					불가할 수 있습니다.
+				</p>
 			</div>
 
-		<!-- 검색창과 버튼 -->
+			<!-- 검색창과 버튼 -->
 			<div class="textbox">
 				<input type="text" id="textbox">
 				<button type="submit" id="search">
@@ -50,174 +55,178 @@
 			</div>
 			<br>
 
-		<!-- 게시판 리스트 -->
-		<div id="board">
-			<table>
-				<thead>
-					<tr>
-						<th>NO</th>
-						<th>항목</th>
-						<th>제목</th>
-						<th>작성자</th>
-						<th>조회수</th>
-						<th>날짜</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr>
-						<th>공지</th>
-						<td class="center">공지</td>
-						<td>(필독)글쓰기 전 확인해 주세요.[1985]</td>
-						<td class="center">관리자</td>
-						<td class="center">35482</td>
-						<td class="center">2022.02.15</td>
-					</tr>
-					
-					<tr>
-						<th>1</th>
-						<td class="center">[소통]</td>
-						<td>도림천 다녀오는 길![21] <span class="glyphicon glyphicon-picture"></span></td>
-						<td class="center">신림러</td>
-						<td class="center">47</td>
-						<td class="center">2022.07.25</td>
-					</tr>
-					
-					<tr>
-						<th>2</th>
-						<td class="center">[함께]</td>
-						<td>한강 사진 공유~[14] <span class="glyphicon glyphicon-picture"></span></td>
-						<td class="center">프리러너</td>
-						<td class="center">21</td>
-						<td class="center">2022.07.25</td>
-					</tr>
-					
-					<tr>
-						<th>3</th>
-						<td class="center">[소통]</td>
-						<td>러닝화 구매 후기[4] <span class="glyphicon glyphicon-picture"></span></td>
-						<td class="center">하이슈즈</td>
-						<td class="center">17</td>
-						<td class="center">2022.07.25</td>
-					</tr>
-					
-					<tr>
-						<th>4</th>
-						<td class="center">[소통]</td>
-						<td>관악산 정상뷰[16] <span class="glyphicon glyphicon-picture"></span></td>
-						<td class="center">올하이킹</td>
-						<td class="center">54</td>
-						<td class="center">2022.07.25</td>
-					</tr>
-					
-					<tr>
-						<th>5</th>
-						<td class="center">[후기]</td>
-						<td>한강 코스에서 공사 진행중이네요;[96]</td>
-						<td class="center">알림러</td>
-						<td class="center">168</td>
-						<td class="center">2022.07.25</td>
-					</tr>
-					
-					<tr>
-						<th>6</th>
-						<td class="center">[소통]</td>
-						<td>집 겨우 도착[0]</td>
-						<td class="center">히유</td>
-						<td class="center">2</td>
-						<td class="center">2022.07.25</td>
-					</tr>
-					
-					<tr>
-						<th>7</th>
-						<td class="center">[소통]</td>
-						<td>강남 산책 코스 등록했어요! 많이 이용해 주세요![5]</td>
-						<td class="center">직장노예</td>
-						<td class="center">33</td>
-						<td class="center">2022.07.24</td>
-					</tr>
-					
-					<tr>
-						<th>8</th>
-						<td class="center">[질문]</td>
-						<td>등산 배낭 공구하실 분??[186]</td>
-						<td class="center">장비빨</td>
-						<td class="center">78</td>
-						<td class="center">2022.07.24</td>
-					</tr>
-					
-					<tr>
-						<th>9</th>
-						<td class="center">[질문]</td>
-						<td>ㅇㅇ빌딩 옆 top1 산책 코스에서 차키 보신 분ㅜㅠ[19]</td>
-						<td class="center">매직핸드</td>
-						<td class="center">34</td>
-						<td class="center">2022.07.24</td>
-					</tr>
-					
-					<tr>
-						<th>10</th>
-						<td class="center">[후기]</td>
-						<td>내일 폭염이라네요ㅜ][2]</td>
-						<td class="center">날씨예민러</td>
-						<td class="center">18</td>
-						<td class="center">2022.07.23</td>
-					</tr>
-				</tbody>
-			</table>
-		</div><!-- table -->
-		
-		<!-- 글쓰기 버튼 -->
-		<div>
-			<button type="submit" id="write">문의하기</button>
+			<!-- 게시판 리스트 -->
+			<div id="board">
+				<table>
+					<thead>
+						<tr>
+							<th>NO</th>
+							<th>항목</th>
+							<th>제목</th>
+							<th>작성자</th>
+							<th>조회수</th>
+							<th>날짜</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<th>공지</th>
+							<td class="center">공지</td>
+							<td>(필독)글쓰기 전 확인해 주세요.[1985]</td>
+							<td class="center">관리자</td>
+							<td class="center">35482</td>
+							<td class="center">2022.02.15</td>
+						</tr>
+
+						<tr>
+							<th>1</th>
+							<td class="center">[소통]</td>
+							<td>도림천 다녀오는 길![21] <span
+								class="glyphicon glyphicon-picture"></span></td>
+							<td class="center">신림러</td>
+							<td class="center">47</td>
+							<td class="center">2022.07.25</td>
+						</tr>
+
+						<tr>
+							<th>2</th>
+							<td class="center">[함께]</td>
+							<td>한강 사진 공유~[14] <span class="glyphicon glyphicon-picture"></span></td>
+							<td class="center">프리러너</td>
+							<td class="center">21</td>
+							<td class="center">2022.07.25</td>
+						</tr>
+
+						<tr>
+							<th>3</th>
+							<td class="center">[소통]</td>
+							<td>러닝화 구매 후기[4] <span class="glyphicon glyphicon-picture"></span></td>
+							<td class="center">하이슈즈</td>
+							<td class="center">17</td>
+							<td class="center">2022.07.25</td>
+						</tr>
+
+						<tr>
+							<th>4</th>
+							<td class="center">[소통]</td>
+							<td>관악산 정상뷰[16] <span class="glyphicon glyphicon-picture"></span></td>
+							<td class="center">올하이킹</td>
+							<td class="center">54</td>
+							<td class="center">2022.07.25</td>
+						</tr>
+
+						<tr>
+							<th>5</th>
+							<td class="center">[후기]</td>
+							<td>한강 코스에서 공사 진행중이네요;[96]</td>
+							<td class="center">알림러</td>
+							<td class="center">168</td>
+							<td class="center">2022.07.25</td>
+						</tr>
+
+						<tr>
+							<th>6</th>
+							<td class="center">[소통]</td>
+							<td>집 겨우 도착[0]</td>
+							<td class="center">히유</td>
+							<td class="center">2</td>
+							<td class="center">2022.07.25</td>
+						</tr>
+
+						<tr>
+							<th>7</th>
+							<td class="center">[소통]</td>
+							<td>강남 산책 코스 등록했어요! 많이 이용해 주세요![5]</td>
+							<td class="center">직장노예</td>
+							<td class="center">33</td>
+							<td class="center">2022.07.24</td>
+						</tr>
+
+						<tr>
+							<th>8</th>
+							<td class="center">[질문]</td>
+							<td>등산 배낭 공구하실 분??[186]</td>
+							<td class="center">장비빨</td>
+							<td class="center">78</td>
+							<td class="center">2022.07.24</td>
+						</tr>
+
+						<tr>
+							<th>9</th>
+							<td class="center">[질문]</td>
+							<td>ㅇㅇ빌딩 옆 top1 산책 코스에서 차키 보신 분ㅜㅠ[19]</td>
+							<td class="center">매직핸드</td>
+							<td class="center">34</td>
+							<td class="center">2022.07.24</td>
+						</tr>
+
+						<tr>
+							<th>10</th>
+							<td class="center">[후기]</td>
+							<td>내일 폭염이라네요ㅜ][2]</td>
+							<td class="center">날씨예민러</td>
+							<td class="center">18</td>
+							<td class="center">2022.07.23</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+			<!-- table -->
+
+			<!-- 글쓰기 버튼 -->
+			<div>
+				<button type="submit" id="write">문의하기</button>
+			</div>
+
+			<!-- 페이지 -->
+			<div id="page">
+				<ul>
+					<li>◀</li>
+					<li>1</li>
+					<li>2</li>
+					<li>3</li>
+					<li>4</li>
+					<li class="active">5</li>
+					<li>6</li>
+					<li>7</li>
+					<li>8</li>
+					<li>9</li>
+					<li>10</li>
+					<li>▶</li>
+				</ul>
+			</div>
+			<!-- board button -->
+
 		</div>
-		
-		<!-- 페이지 -->
-		<div id="page">
-			<ul>
-				<li>◀</li>
-				<li>1</li>
-				<li>2</li>
-				<li>3</li>
-				<li>4</li>
-				<li class="active">5</li>
-				<li>6</li>
-				<li>7</li>
-				<li>8</li>
-				<li>9</li>
-				<li>10</li>
-				<li>▶</li>
-			</ul>
-		</div><!-- board button -->
-
-
-<!----------------- footer ------------------>		
-	<br>
-	<div class="footer">
-		<div class="footer-text">
-			<p>주식회사 조아</p>
-			<p>대표 : 최보승</p>
-			<p>사업자 번호 : 123-456-789</p>
-			<p>서울특별시 관악구 봉천동 862 - 1</p>
+		<!----------------- footer ------------------>
+		<br>
+		<div class="footer">
+			<div class="footer-text">
+				<p>주식회사 조아</p>
+				<p>대표 : 최보승</p>
+				<p>사업자 번호 : 123-456-789</p>
+				<p>서울특별시 관악구 봉천동 862 - 1</p>
+				<br>
+				<p>고객센터 | 평일 9 : 30 ~ 18 : 30, 점심시간 : 12 : 00 ~ 13 : 00 (토, 일요일,
+					공휴일 휴무)</p>
+				<p>tel. 02 - 1111 - 1111</p>
+				<p>fax. 02 - 1111 - 1111</p>
+				<p>email. joa@joa.co.kr</p>
+			</div>
 			<br>
-			<p>고객센터 | 평일 9 : 30 ~ 18 : 30, 점심시간 : 12 : 00 ~ 13 : 00 (토, 일요일, 공휴일 휴무)</p>
-			<p>tel. 02 - 1111 - 1111</p>
-			<p>fax. 02 - 1111 - 1111</p>
-			<p>email. joa@joa.co.kr</p>
-		</div>
-		<br>
-		<div class="footer-btn">
-			<button id="footerbtn" type="button" name="" value="">자주묻는 질문</button>
-			<button id="footerbtn" type="button" name="" value="">1:1 문의</button>
-		</div>
-		<br>
-		<hr class="my-hr1">
-		<p id="footer-Copyright">JOA, Inc. All rights reserved.</p>
+			<div class="footer-btn">
+				<button id="footerbtn" type="button" name="" value="">자주묻는
+					질문</button>
+				<button id="footerbtn" type="button" name="" value="">1:1
+					문의</button>
+			</div>
+			<br>
+			<hr class="my-hr1">
+			<p id="footer-Copyright">JOA, Inc. All rights reserved.</p>
 
-	</div>	
+		</div>
 
-	
+
 	</div>
-	
-</div>
 </body>
 </html>
