--- a/webapp/WEB-INF/views/best/bestplus.html
+++ b/webapp/WEB-INF/views/best/bestplus.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-	<div id="wrap">
+
 	
 		<div id="header">
 			<a href="../main/index.html"><img id="logo" src="../../../assets/image/main/logo.jpg"></a>
@@ -33,7 +33,7 @@
 			<!-- nav -->
 		</div>
 <!---------------------------------------- header --------------------------------------->
-
+	<div id="wrap">
 	<div class="content"> 	
 		<h1>Best</h1>
 
@@ -80,7 +80,7 @@
 			<div class="img-line">
 				<div class="img-list">
 					<a href=""> <img src="C:\javaStudy\JOA_GroupProject\webapp\assets\image\sw1.jpg" />
-						<span id="best-text"> 지역 : <span>서울</span> | 거리 : <span>1km</span> 🅽</span></a>
+						<span id="best-text"> 지역 : <span>서울</span> | 거리 : <span>1km</span> <span id="new">🅽</span></span></a>
 				
 					<div class="comment-text">
 						<input type="text" name="comment" value="私の名前はウヨンウです。" size="40"><a href=""></a> 
@@ -281,7 +281,7 @@
 		</div>		
 	</div>			
 				
-				
+</div>				
 		<!------------------ footer -------------------->
 		<div class="footer">
 			<div class="footer-text">
@@ -308,7 +308,7 @@
 		<!-- /footer -->			
 			
 			
-	</div>
+	
 
 </body>
 </html>
