--- a/webapp/WEB-INF/views/main/index.html
+++ b/webapp/WEB-INF/views/main/index.html
@@ -8,38 +8,40 @@
 
 </head>
 <body>
-	<div id="wrap">
-		<div id="header">
-			<a href="../main/index.html">
-			<img id="logo" src="../../../assets/image/main/logo.jpg"></a>
 
-			<div id="login">
-				<ul>
-					<li><a href="">회원가입</a></li>
-					<li><a href="">로그인</a></li>
-				</ul>
-			</div>
-			<!-- login -->
+	<div id="header">
+		<a href="../main/index.html"> 
+		<img id="logo" src="../../../assets/image/main/logo.jpg"></a>
 
-			<div id="nav">
-				<ul>
-					<li><a href="../together/together.html">함께하기</a></li>
-					<li><a href="../board/board.html">게시판</a></li>
-					<li><a href="../best/best.html">베스트</a></li>
-					<li><a href="../map/map.html">지도</a></li>
-				</ul>
-			</div>
-			<!-- nav -->
+		<div id="login">
+			<ul>
+				<li><a href="">회원가입</a></li>
+				<li><a href="">로그인</a></li>
+			</ul>
 		</div>
-		<!-- header -->
+		<!-- login -->
 
+		<div id="nav">
+			<ul>
+				<li><a href="../together/together.html">함께하기</a></li>
+				<li><a href="../board/board.html">게시판</a></li>
+				<li><a href="../best/best.html">베스트</a></li>
+				<li><a href="../map/map.html">지도</a></li>
+			</ul>
+		</div>
+		<!-- nav -->
+	</div>
+	<!-- header -->
 
-		<!-- photo slider -->
+<!------------------------- photo slider ------------------------>
+	<div id="wrap">
+
 		<div class="slider">
-			<input type="radio" name="slide" id="slide1" checked> <input
-				type="radio" name="slide" id="slide2"> <input type="radio"
-				name="slide" id="slide3"> <input type="radio" name="slide"
-				id="slide4">
+			<input type="radio" name="slide" id="slide1" checked> 
+			<input type="radio" name="slide" id="slide2"> 
+			<input type="radio" name="slide" id="slide3"> 
+			<input type="radio" name="slide" id="slide4">
+				
 			<ul class="imgs" id="imgholder">
 				<li><img src="C:\javaStudy\JOA_GroupProject\webapp\assets\image\main\hallowin1.jpg"></li>
 				<li><img src="c:\javastudy\workspace_web\joa\webapp\assets\images\sw1.jpg"></li>
@@ -57,48 +59,43 @@
 
 		<div class="main-text">
 			<p>
-				<span>살아 숨쉬는 자연에서 <br>
-				<br> 운동을 시작하다.
+				<span>살아 숨쉬는 자연에서 <br> <br> 운동을 시작하다.
 				</span>
 			</p>
-			<br>
-			<br>
-			<br>
+			<br> <br> <br>
 			<p>
 				<span>Joyful Outdoor Activity</span>
 			</p>
-			<br>
-			<br>
-			<br>
+			<br> <br> <br>
 		</div>
+		
+	</div>		
 		<!-- /text -->
 
-
-		<br>
-		<div class="footer">
-			<div class="footer-text">
-				<p>주식회사 조아</p>
-				<p>대표 : 최보승</p>
-				<p>사업자 번호 : 123-456-789</p>
-				<p>서울특별시 관악구 봉천동 862 - 1</p>
-				<br>
-				<p>고객센터 | 평일 9 : 30 ~ 18 : 30, 점심시간 : 12 : 00 ~ 13 : 00 (토, 일요일,
-					공휴일 휴무)</p>
-				<p>Tel. 02 - 1111 - 1111</p>
-				<p>Fax. 02 - 1111 - 1111</p>
-				<p>Email. joa@joa.co.kr</p>
-			</div>
+	<!------------------------ footer ------------------------>
+	<br>
+	<div class="footer">
+		<div class="footer-text">
+			<p>주식회사 조아</p>
+			<p>대표 : 최보승</p>
+			<p>사업자 번호 : 123-456-789</p>
+			<p>서울특별시 관악구 봉천동 862 - 1</p>
 			<br>
-			<div class="footer-btn">
-				<button id="footerbtn" type="button">자주묻는 질문</button>
-				<button id="footerbtn" type="button">1:1 문의</button>
-			</div>
-			<br>
-			<hr class="my-hr1">
-			<p id="footer-Copyright">JOA, Inc. All rights reserved.</p>
-
+			<p>고객센터 | 평일 9 : 30 ~ 18 : 30, 점심시간 : 12 : 00 ~ 13 : 00 (토, 일요일, 공휴일 휴무)</p>
+			<p>Tel. 02 - 1111 - 1111</p>
+			<p>Fax. 02 - 1111 - 1111</p>
+			<p>Email. joa@joa.co.kr</p>
 		</div>
-		<!-- /footer -->
+		<br>
+		<div class="footer-btn">
+			<button id="footerbtn" type="button">자주묻는 질문</button>
+			<button id="footerbtn" type="button">1:1 문의</button>
+		</div>
+		<br>
+		<hr class="my-hr1">
+		<p id="footer-Copyright">JOA, Inc. All rights reserved.</p>
+
 	</div>
+
 </body>
 </html>
