--- a/webapp/WEB-INF/views/best/bestplus.html
+++ b/webapp/WEB-INF/views/best/bestplus.html
@@ -92,7 +92,7 @@
 
 				<div class="img-list">
 					<a href=""> <img src="C:\javaStudy\JOA_GroupProject\webapp\assets\image\best\map.jpg" />
-						<span id="best-text"> 지역 : <span>부산</span> | 거리 : <span>1km</span></span></a>
+						<span id="best-text"> 지역 : <span>부산</span> | 거리 : <span>1km</span> <span id="new">🅽</span></span></a>
 					<div class="comment-text">
 						<input type="text" name="comment" value="私の名前はウヨンウです。" size="40"><a href=""></a> 
 							<input type="text" name="comment" value="댓글이오" size="40"><a href=""></a> 
@@ -115,7 +115,7 @@
 		<!-- //Top 1~3 게시물// -->
 		<br> <br> <br>
 
-		<hr class="one">
+		<hr id="hr">
 
 		<!-- Top 4~6 -->
 		<div class="img-total2">
@@ -156,7 +156,7 @@
 				</div>
 			</div>
 		</div>
-		<hr class="one">
+		<hr id="hr">
 		
 		<!-- Top 7~9 -->
 		<div class="img-total2">
@@ -197,7 +197,7 @@
 				</div>
 			</div>
 		</div>
-		<hr class="one">
+		<hr id="hr">
 				
 		<!-- Top 10~12 -->		
 		<div class="img-total2">
@@ -238,7 +238,7 @@
 				</div>
 			</div>
 		</div>	
-		<hr class="one">
+		<hr id="hr">
 		
 		<!-- Top 13~15 -->		
 		<div class="img-total2">
