--- a/webapp/assets/css/read.css
+++ b/webapp/assets/css/read.css
@@ -58,15 +58,15 @@ tr>#date, #up {
 
 /******************** 작성자 버튼 ********************/
 
-#writer_btn {margin-left: 79.5%;}
-#modify {
+#writer_btnM {margin-left: 79.5%;}
+#modify_m {
 	width : 82px;
 	height: 35px;
 	background-color: #dedede;
 	color: #666;
 	border:none;
 }
-#delete {
+#delete_m {
 	margin-left: 5px;
 	width : 82px;
 	height: 35px;
@@ -74,9 +74,117 @@ tr>#date, #up {
 	color: #fff;
 	border:none;
 }
+/******/
+#writer_btnS {margin-top: 2px;}
+#modify_s {
+	width : 60px;
+	height: 30px;
+	background-color: #dedede;
+	color: #666;
+	font-size : 10pt;
+	border:none;
+}
+#delete_s {
+	margin-left: 1px;
+	width : 60px;
+	height: 30px;
+	background-color: #000;
+	color: #fff;
+	font-size : 10pt;
+	border:none;
+}
+/******/
+#writer_btnXS {margin-top: 16px;}
+#modify_xs {
+	width : 50px;
+	height: 25px;
+	background-color: #dedede;
+	color: #666;
+	font-size : 9pt;
+	border:none;
+}
+#delete_xs {
+	margin-left: 0.5px;
+	width : 50px;
+	height: 25px;
+	background-color: #000;
+	color: #fff;
+	font-size : 9pt;
+	border:none;
+}
 
+/********************** 댓글 **********************/
 
+#top_comment {
+	margin-left: 12%;
+	margin-top: 100px;
+	margin-bottom: 10px;
+	font-size : 16pt;
+	font-weight : bold;
+}
+#commentbox {
+	margin-left: 12%;
+	width : 80%;
+	border-top: solid 2px #ccc;
+	border-bottom: solid 2px #ccc;
+}
+.id {
+	font-size : 14pt;
+	font-weight : bold;
+	margin-left: 10px;
+	margin-top: 23px;
+}
+.comment {
+	font-size : 12pt;
+	margin-left: 10px;
+	margin-top: 3px;
+}
+#comment_, #comment_btn, #REcomment_btn {
+	font-size : 12pt;
+	margin-left: 10px;
+	margin-top: 5px;
+	float: left;
+}
+#comment_btn {
+	margin-right: 10px;
+}
+#bold {
+	margin-left: 2px;
+	margin-right: 2px;
+	margin-top: 3px;
+	font-size : 12pt;
+	font-weight : bold;
+	float: left;
+}
+.REcomment {
+	margin-left: 10px;
+	margin-top: 20px;
+	font-size : 11pt;
+}
+#REcomment_btn {
+	font-size : 11pt;
+	margin-left: 10px;
+	margin-right: 10px;
+	margin-top: 20px;
+	float: left;
+}
+#REcomment_bottom {
+	font-size : 11pt;
+	margin-left: 10px;
+	margin-top: 15px;
+	margin-bottom: 35px;
+}
 
+/******************** 목록 버튼 ********************/
 
-
-
+#list {
+	margin-left: 86%;
+	margin-top: 65px;
+	width : 82px;
+	height: 35px;
+	background-color: #fff;
+	color: #000;
+	font-size : 12pt;
+	border: solid 2px #000;
+	border-radius: 5px;
+}
