--- a/webapp/WEB-INF/views/together/read.html
+++ b/webapp/WEB-INF/views/together/read.html
@@ -78,7 +78,7 @@
 							다같이 마라톤 같이 뛰었으면 좋겠어요~ 당일 덥다고 일기예보가 떠서 각자 마실 물과 땀수건을 챙겨 오셨으면 해요~!<br>
 							점심도 같이 먹고 갔으면 해서 각자 점심값도 같이 준비 부탁드려요!<br><br>
 							ps.무조건 러닝화 신고 오세요. 장거리이기 때문에 발이 붓고 다리가 많이 아플 수 있습니다.<br>
-							   러닝화가 없으시면 참가 거부하겠습니다.
+							&nbsp &nbsp 러닝화가 없으시면 참가 거부하겠습니다.
 						</td>
 					</tr>
 				</tbody>
@@ -86,10 +86,40 @@
 		</div><!-- 테이블 -->
 		
 		<!-- 수정, 삭제 버튼 -->
-		<div id="writer_btn">
-			<button type="submit" id="modify">수정</button>
-			<button type="submit" id="delete">삭제</button>
-		</div>
+		<div id="writer_btnM">
+			<button type="submit" id="modify_m">수정</button>
+			<button type="submit" id="delete_m">삭제</button>
+		</div><!-- writer_btn -->
+		
+		<!-- 댓글 -->
+		<div>
+			<p id="top_comment">댓글</p>
+			<div id="commentbox">
+				<p class="id">히유</p>
+				<p class="comment">-저도 오늘 나갔다가 놀랐어요~</p>
+				<p class="id">쭌</p>
+				<p id="comment_">-</p><p id="bold">@깜이</p><p class="comment">나도 부르지 그랬어~</p>
+				<p class="id">깜이</p>
+				<p id="comment_btn">-망고 샀어ㅎㅎ</p>
+				<!-- 수정, 삭제 버튼 -->
+				<div id="writer_btnS">
+					<button type="submit" id="modify_s">수정</button>
+					<button type="submit" id="delete_s">삭제</button>
+				</div><!-- writer_btn -->
+				<p class="REcomment">&nbsp &nbsp ㄴ쭌:망고 얼마야?</p>
+				<p id="REcomment_btn">&nbsp &nbsp ㄴ깜이:할인해서 만원</p>
+				<!-- 수정, 삭제 버튼 -->
+				<div id="writer_btnXS">
+					<button type="submit" id="modify_xs">수정</button>
+					<button type="submit" id="delete_xs">삭제</button>
+				</div><!-- writer_btn -->
+				<p id="REcomment_bottom">&nbsp &nbsp ㄴ쭈쭈:나는 두개 샀어!</p>
+			</div><!-- commentbox -->
+		</div><!-- 댓글 -->
+
+		<button type="submit" id="list">목록</button>
+		
+		<br><br><br><br><br><br><br><br><br><br>
 	
 	</div><!-- wrap -->
 
