--- a/webapp/WEB-INF/views/board/read.html
+++ b/webapp/WEB-INF/views/board/read.html
@@ -65,14 +65,40 @@
 			<br>
 			
 			<!-- 수정, 삭제 버튼 -->
-			<div id="writer_btn">
-				<button type="submit" id="modify">수정</button>
-				<button type="submit" id="delete">삭제</button>
-			</div>
+			<div id="writer_btnM">
+				<button type="submit" id="modify_m">수정</button>
+				<button type="submit" id="delete_m">삭제</button>
+			</div><!-- writer_btn -->
 			
+			<!-- 댓글 -->
 			<div>
-				댓글
-			</div>
+				<p id="top_comment">댓글</p>
+				<div id="commentbox">
+					<p class="id">히유</p>
+					<p class="comment">-저도 오늘 나갔다가 놀랐어요~</p>
+					<p class="id">쭌</p>
+					<p id="comment_">-</p><p id="bold">@깜이</p><p class="comment">나도 부르지 그랬어~</p>
+					<p class="id">깜이</p>
+					<p id="comment_btn">-망고 샀어ㅎㅎ</p>
+					<!-- 수정, 삭제 버튼 -->
+					<div id="writer_btnS">
+						<button type="submit" id="modify_s">수정</button>
+						<button type="submit" id="delete_s">삭제</button>
+					</div><!-- writer_btn -->
+					<p class="REcomment">&nbsp &nbsp ㄴ쭌:망고 얼마야?</p>
+					<p id="REcomment_btn">&nbsp &nbsp ㄴ깜이:할인해서 만원</p>
+					<!-- 수정, 삭제 버튼 -->
+					<div id="writer_btnXS">
+						<button type="submit" id="modify_xs">수정</button>
+						<button type="submit" id="delete_xs">삭제</button>
+					</div><!-- writer_btn -->
+					<p id="REcomment_bottom">&nbsp &nbsp ㄴ쭈쭈:나는 두개 샀어!</p>
+				</div><!-- commentbox -->
+			</div><!-- 댓글 -->
+		
+			<button type="submit" id="list">목록</button>
+			
+			<br><br><br><br><br><br><br><br><br><br>
 		
 	</div><!-- wrap -->	
 
