사진추가 버튼 수정

--- a/webapp/WEB-INF/views/course/picture_add.html
+++ b/webapp/WEB-INF/views/course/picture_add.html
@@ -100,7 +100,8 @@
 					
 					</div>
 					
-					<button class="pic-update">사진 추가하기</button>
+					<label class="pic-update" for="input-file">사진 추가하기</label>
+					<input type="file" id="input-file">
 				</div>
 			</div>
 		</div>
