--- a/webapp/assets/css/course_view.css
+++ b/webapp/assets/css/course_view.css
@@ -37,9 +37,11 @@ input[type=radio] {display:none;}
 	float: left;
 	font-size: 16px;
 	text-align: center;
-	color: rgb(34, 34, 34);
 	background-color: rgb(255,255,255);
 	border: 1px solid rgb(174, 174, 174);
+}
+.tabbtn>a {
+	color: rgb(34, 34, 34);
 }
 /* 검은색 버튼 */
 .selected, .selected>a {
