--- a/webapp/WEB-INF/views/course/c_viewForm.html
+++ b/webapp/WEB-INF/views/course/c_viewForm.html
@@ -10,7 +10,7 @@
 <!-- 자바스크립트 -->
 <script type="text/javascript" src="../../../assets/js/jquery/jquery-1.12.4.js"></script>
 <script type="text/javascript" src="../../../assets/bootstrap/js/bootstrap.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script> <!-- 차트 api -->
 </head>
 <body>
 
@@ -56,12 +56,12 @@
 				<div class="course-view-tap">
 					<ul>
 						<li>
-							<div class="tabbtn selected" style="cursor: pointer;" onclick="window.location='/c_viewForm.html';">
+							<div class="tabbtn selected" style="cursor: pointer;" onclick="window.location='./c_viewForm.html';">
 								<a>코스정보</a>
 							</div>
 						</li>
 						<li>
-							<div class="tabbtn" style="cursor: pointer;" onclick="window.location='/r_viewForm.html';">
+							<div class="tabbtn" style="cursor: pointer;" onclick="window.location='./r_viewForm.html';">
 								<a>기록보기</a>
 							</div>
 						</li>
