--- a/webapp/WEB-INF/views/main/index.html
+++ b/webapp/WEB-INF/views/main/index.html
@@ -37,16 +37,16 @@
 	<div id="wrap">
 
 		<div class="slider">
-			<input type="radio" name="slide" id="slide1" checked> 
-			<input type="radio" name="slide" id="slide2"> 
-			<input type="radio" name="slide" id="slide3"> 
-			<input type="radio" name="slide" id="slide4">
-				
+			<input type="radio" name="slide" id="slide1" checked> <input
+				type="radio" name="slide" id="slide2"> <input type="radio"
+				name="slide" id="slide3"> <input type="radio" name="slide"
+				id="slide4">
+
 			<ul class="imgs" id="imgholder">
 				<li><img src="../../../assets/image/main/swiss.jpg"></li>
+				<li><img src="../../../assets/image/main/paris.jpg"></li>
 				<li><img src="../../../assets/image/main/parispark.jpg"></li>
 				<li><img src="../../../assets/image/main/busan.jpg"></li>
-				<li><img src="../../../assets/image/main/paris.jpg"></li>
 			</ul>
 
 			<div class="bullets">
@@ -54,23 +54,18 @@
 				<label for="slide3">&nbsp;</label> <label for="slide4">&nbsp;</label>
 			</div>
 		</div>
-		<!-- /photo slider -->
 
+		<!------------------------- 글귀 ------------------------>
 
 		<div class="main-text">
-			<p>
-				<span>살아 숨쉬는 자연에서 <br> <br> 운동을 시작하다.
-				</span>
+			<p>살아 숨쉬는 자연에서 <br><br><br> 운동을 시작하다.
 			</p>
 			<br> <br> <br>
 			<p>
-				<span>Joyful Outdoor Activity</span>
+				<span><marquee width="5px" height="15px" scrolldelay="300" direction="up">J</marquee>oyful <marquee width="10px" height="15px" scrolldelay="300" direction="up">O</marquee>utdoor <marquee width="10px" height="15px" scrolldelay="300" direction="up">A</marquee>ctivity</span>
 			</p>
-			<br> <br> <br>
 		</div>
-		
-	</div>		
-		<!-- /text -->
+	</div>
 
 	<!------------------------ footer ------------------------>
 	<br>
