--- a/webapp/WEB-INF/views/board/read.html
+++ b/webapp/WEB-INF/views/board/read.html
@@ -56,6 +56,48 @@
 							<td>
 								<img class="image" src="../../../assets/image/board/window.jpg">
 								<img class="image" src="../../../assets/image/board/flower.jpg">
+								<div class="course-container" onclick="window.location='../course/c_viewform.html';">
+									<div class="course-icon"><img src="../../../assets/image/map/map-icon.jpg"></div>
+									<div class="course-info">
+										<h3 class="course-title">헬 ^^</h3>
+										<p class="p-info">
+											작성자: 쿵야 <br>
+											거리: 5.0km <br>
+											시간: 40분
+										</p>
+										<div class="tag-blue"><p>런닝</p></div>
+										<div class="tag-pink"><p>어려움</p></div>
+									</div> <!-- course-info -->
+								</div> <!-- course-container -->
+								
+								<div class="chart">
+									<table id="together_chart">
+										<thead>
+											<tr class="top">
+												<th class="line_top">2022/07/24 - 2022/07/30</th>
+												<th class="mark">
+													<button class="bookmark">
+														<img class="image" src="../../../assets/image/together/bookmarks_black.png">
+													</button>
+												</th>
+											</tr>
+										</thead>
+										<tbody>
+											<tr>
+												<th colspan="2" class="content">쭈쭈네 동네 한바퀴</th>
+											</tr>
+											<tr>
+												<th colspan="2" class="content_course"><span class="glyphicon glyphicon-map-marker" class="marking"></span>신림 - 잠실</th>
+											</tr>
+											<tr>
+												<th colspan="2" class="line_bottom">
+													산책
+													<button type="submit" class="join"><span class="glyphicon glyphicon-user" id="join_icon"></span>11/15</button>
+												</th>
+											</tr>
+										</tbody>
+									</table>
+								</div><!-- table(chart) -->
 							</td>
 						</tr>
 					</tbody>
