--- a/webapp/assets/css/read.css
+++ b/webapp/assets/css/read.css
@@ -20,7 +20,7 @@ h1 {
 
 table {
 	width: 80%;
-	margin-left: 170px;
+	margin-left: 12%;
 	border-top: solid 2px;
 	border-bottom: solid 2px; 
 	border-collapse: collapse;
@@ -54,6 +54,84 @@ tr>#date, #up {
 	height: 270px;
 	margin-left: 10px;
 	padding-bottom: 30px;
+}
+/***** 첨부 자료 *****/
+.course-container {
+	margin-left: 10px;
+	margin-bottom: 50px;
+	cursor: pointer;
+	width: 380px;
+	height: 200px;
+	overflow: hidden;
+	border: solid 1px #c0c0c0;
+}
+.course-title {margin-top: 28px;}
+.course-container .course-icon {
+	float: left;
+	width: 205px;
+	height: 144px;
+	overflow: hidden;
+}
+.course-icon {
+	margin-top: 15px;
+	margin-left: 15px;
+	margin-bottom: 22px;
+}
+/***** 함께하기 첨부 *****/
+#together_chart {
+	width: 335px;
+	height: 150px;
+	margin-bottom: 4.37%;
+	border: solid 1px;
+	float: left;
+	border: solid 1px #ccc;
+}
+.chart {
+	text-align: center;
+}
+/** 표 내부 행 **/
+.line_top {
+	float: left;
+	margin-left: 58px;
+	font-size : 12pt;
+}
+.line_bottom {
+	padding-left: 117px;
+	padding-right: 95px;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	border-top: solid 1px #ccc;
+	color: #9e9e9e;
+	font-size : 13pt;
+}
+/** 북마크 버튼 **/
+.top {
+	height: 20px;
+	border-bottom: solid 1px #ccc;
+}
+.mark {background-color: #fff;}
+.content {
+	font-size : 13pt;
+	padding: 20px 90px 20px 100px;
+}
+.content_course {
+	font-size : 13pt;
+	padding: 20px 120px 20px 110px;
+}
+.bookmark {
+	margin-left: 12%;
+	margin-top: 5px;
+	background-color: #fff;
+	border:none;
+}
+.image {
+	width : 18px;
+	height: 18px;
+}
+.join {
+	background-color: #fff;
+	border: solid 1px #9e9e9e;
+	color: #9e9e9e;
 }
 
 /******************** 작성자 버튼 ********************/
