--- a/webapp/WEB-INF/views/board/read.html
+++ b/webapp/WEB-INF/views/board/read.html
@@ -77,7 +77,7 @@
 												<th class="line_top">2022/07/24 - 2022/07/30</th>
 												<th class="mark">
 													<button class="bookmark">
-														<img class="image" src="../../../assets/image/together/bookmarks_black.png">
+														<img id="image" src="../../../assets/image/together/bookmarks_black.png">
 													</button>
 												</th>
 											</tr>
