--- a/webapp/WEB-INF/views/board/read.html
+++ b/webapp/WEB-INF/views/board/read.html
@@ -70,6 +70,7 @@
 									</div> <!-- course-info -->
 								</div> <!-- course-container -->
 								
+								<!-- 
 								<div class="chart">
 									<table id="together_chart">
 										<thead>
@@ -97,7 +98,8 @@
 											</tr>
 										</tbody>
 									</table>
-								</div><!-- table(chart) -->
+								</div>
+								 -->
 							</td>
 						</tr>
 					</tbody>
