--- a/webapp/assets/css/read.css
+++ b/webapp/assets/css/read.css
@@ -57,16 +57,15 @@ tr>#date, #up {
 }
 /***** 첨부 자료 *****/
 .course-container {
-	margin-left: 10px;
-	margin-bottom: 50px;
 	cursor: pointer;
 	width: 380px;
 	height: 200px;
 	overflow: hidden;
 	border: solid 1px #c0c0c0;
+	margin-right: 0px;
 }
 .course-title {margin-top: 28px;}
-.course-container .course-icon {
+.course-icon {
 	float: left;
 	width: 205px;
 	height: 144px;
@@ -122,7 +121,7 @@ tr>#date, #up {
 	margin-left: 12%;
 	margin-top: 5px;
 	background-color: #fff;
-	border:none;
+	border: none;
 }
 #image {
 	width : 18px;
